--- a/public/criarpedido.html
+++ b/public/criarpedido.html
@@ -178,8 +178,8 @@
                 const order = {
                     id: document.getElementById('orderId').value,
                     customer: {
-                        name: document.getElementById('customerName').value,
-                        phone: document.getElementById('customerPhone').value
+                        customerName: document.getElementById('customerName').value,
+                        customerPhone: document.getElementById('customerPhone').value
                     },
                     deliveryPoint: {
                         address: `${document.getElementById('street').value}, ${document.getElementById('streetNumber').value}, ${document.getElementById('neighborhood').value}`,
