--- a/public/criarpedido.html
+++ b/public/criarpedido.html
@@ -95,10 +95,10 @@
                 </select>
             </div>
             <div class="mb-4">
-                <label class="block text-gray-700 text-sm font-bold mb-2" for="items">
-                    Itens do Pedido (JSON)
+                <label class="block text-gray-700 text-sm font-bold mb-2" for="orderDetails">
+                    Detalhes do Pedido
                 </label>
-                <textarea class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="items" placeholder='[{"name": "Item 1", "quantity": 1, "price": 10.00}]' required></textarea>
+                <textarea class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="items" placeholder='Itens do Pedido' required></textarea>
             </div>
             <div class="mb-4">
                 <label class="block text-gray-700 text-sm font-bold mb-2">
