--- a/public/criarpedido.html
+++ b/public/criarpedido.html
@@ -103,10 +103,10 @@
                 </select>
             </div>
             <div class="mb-4">
-                <label class="block text-gray-700 text-sm font-bold mb-2" for="items">
+                <label class="block text-gray-700 text-sm font-bold mb-2" for="orderDetails">
                     Detalhes do Pedido
                 </label>
-                <textarea class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="items" placeholder="Digite os detalhes do pedido aqui" required></textarea>
+                <textarea class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="orderDetails" placeholder="Digite os detalhes do pedido aqui" required></textarea>
             </div>
             <div class="mb-4">
                 <label class="block text-gray-700 text-sm font-bold mb-2">
@@ -233,7 +233,7 @@
                         zipCode: getElementValueById('zipCode')
                     },
                     orderDetails: getElementValueById('orderDetails'),
-                    payment: {
+                    paymentMethod: {
                         method: paymentMethod,
                         total: orderTotal
                     },
