--- a/public/criarpedido.html
+++ b/public/criarpedido.html
@@ -114,16 +114,16 @@
                 </label>
                 <div class="mt-2">
                     <label class="inline-flex items-center">
-                        <input type="radio" class="form-radio" name="paymentMethod" value="MONEY" required>
+                        <input type="radio" class="form-radio" name="paymentMethod" value="money" required>
                         <span class="ml-2">Dinheiro</span>
                     </label>
                     <label class="inline-flex items-center ml-6">
-                        <input type="radio" class="form-radio" name="paymentMethod" value="CARD">
-                        <span class="ml-2">Cartão (card)</span>
+                        <input type="radio" class="form-radio" name="paymentMethod" value="card">
+                        <span class="ml-2">Cartão</span>
                     </label>
                     <label class="inline-flex items-center ml-6">
-                        <input type="radio" class="form-radio" name="paymentMethod" value="ONLINE">
-                        <span class="ml-2">Pg Online (online)</span>
+                        <input type="radio" class="form-radio" name="paymentMethod" value="online">
+                        <span class="ml-2">Pg Online</span>
                     </label>
                 </div>
             </div>
@@ -221,27 +221,25 @@
 
                 const order = {
                     id: getElementValueById('orderId'),
-                    customer: {
-                        customerName: getElementValueById('customerName'),
-                        customerPhone: getElementValueById('customerPhone')
-                    },
+                    status: getElementValueById('status'),
+                    paymentMethod: paymentMethod,
+                    orderTotal: Number(orderTotal),  // Convertendo para número
+                    notes: getElementValueById('notes'),
+                    orderDetails: getElementValueById('orderDetails'),
                     deliveryPoint: {
                         address: `${getElementValueById('street')}, ${getElementValueById('streetNumber')}, ${getElementValueById('neighborhood')}`,
-                    },
-                    deliveryAddress: {
                         street: getElementValueById('street'),
-                        streetNumber: getElementValueById('streetNumber'),
+                        houseNumber: getElementValueById('streetNumber'),
                         complement: getElementValueById('complement'),
-                        neighborhood: getElementValueById('neighborhood'),
-                        zipCode: getElementValueById('zipCode')
+                        postalCode: getElementValueById('zipCode'),
+                        city: "Natal",
+                        region: "RN",
+                        country: "BR"
                     },
-                    orderDetails: getElementValueById('orderDetails'),
-                    payment: {
-                        method: paymentMethod,
-                        total: Number(orderTotal)  // Convertendo para número
-                    },
-                    status: getElementValueById('status'),
-                    notes: getElementValueById('notes')
+                    customer: {
+                        customerPhone: getElementValueById('customerPhone'),
+                        customerName: getElementValueById('customerName')
+                    }
                 };
 
                 appendDebugInfo(`Dados do pedido: ${JSON.stringify(order, null, 2)}`);
