--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -139,8 +139,133 @@
         .label {
             color: #4a4a4a;
         }
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.4);
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 600px;
+            border-radius: 8px;
+        }
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        .close:hover,
+        .close:focus {
+            color: #000;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        .courier-name {
+            font-weight: bold;
+            color: #3498db;
+        }
+        .courier-deliveries {
+            margin-bottom: 10px;
+            padding: 10px;
+            background-color: #f8f9fa;
+            border-radius: 5px;
+        }
+        .view-button {
+            background-color: #2ecc71;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 3px;
+            cursor: pointer;
+            font-size: 12px;
+            margin-left: 10px;
+        }
+        .view-button:hover {
+            background-color: #27ae60;
+        }
+        .print-button {
+            background-color: #e67e22;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 3px;
+            cursor: pointer;
+            font-size: 12px;
+            margin-left: 10px;
+        }
+        .print-button:hover {
+            background-color: #d35400;
+        }
+        .ongoing-orders-list {
+            list-style-type: none;
+            padding: 0;
+        }
+        .ongoing-order-item {
+            background-color: #ecf0f1;
+            margin-bottom: 10px;
+            padding: 10px;
+            border-radius: 5px;
+        }
+        .ongoing-order-item h4 {
+            margin: 0 0 5px 0;
+            color: #2c3e50;
+        }
+        .same-address {
+            color: #e67e22;
+            font-weight: bold;
+        }
+        .cancellation-popup,
+        .same-address-popup {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #f8d7da;
+            color: #721c24;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
+            display: none;
+        }
+        .cancellation-popup .close,
+        .same-address-popup .close {
+            color: #721c24;
+            float: right;
+            font-size: 20px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        #averageTicket {
+            font-weight: bold;
+            color: #27ae60;
+        }
+        .hide-notification-button {
+            background-color: #3498db;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 3px;
+            cursor: pointer;
+            font-size: 12px;
+            margin-top: 10px;
+        }
+        .hide-notification-button:hover {
+            background-color: #2980b9;
+        }
 
-        /* Estilos para o novo formulário de criação de pedidos */
+        /* Novos estilos para o formulário de criação de pedidos */
         #createOrderSection {
             background-color: #fff;
             border-radius: 8px;
@@ -190,6 +315,7 @@
             <button id="reportsButton" class="action-button" onclick="window.open('relatorios.html', '_blank')">Relatórios</button>
         </div>
         <div class="main-content">
+            <!-- Nova seção para criar pedidos -->
             <div id="createOrderSection">
                 <button id="toggleFormButton" onclick="toggleCreateOrderForm()">Criar Novo Pedido</button>
                 <form id="createOrderForm" style="display: none;">
@@ -245,85 +371,201 @@
                     <button type="button" onclick="submitOrder()" class="action-button">Criar Pedido</button>
                 </form>
             </div>
-            <div id="map"></div>
-            <div class="dashboard">
-                <!-- Dashboard content remains the same -->
-            </div>
-        </div>
+
+<div id="map"></div>
+<div class="dashboard">
+    <div class="metric-card">
+        <div class="metric-title">Resumo de Pedidos</div>
+        <div><span class="label">Total:</span> <span id="totalOrders" class="metric-value">0</span></div>
+        <div><span class="label">Em Andamento:</span> <span id="ongoingOrders" class="metric-value">0</span></div>
+        <div><span class="label">Tempo Médio de Preparo:</span> <span id="avgPrepTime" class="metric-value">0 min</span></div>
+        <div><span class="label">Pedidos em loja:</span> <span id="readyOrders" class="metric-value">0</span> <button class="view-button" onclick="showReadyOrders()">Ver</button></div>
+        <div><span class="label">Cancelados:</span> <span id="cancelledOrders" class="metric-value">0</span></div>
+        <div><span class="label">Prioridades:</span> <span id="priorityOrders" class="metric-value">0</span> <button class="view-button" onclick="showPriorityOrders()">Ver</button> <button class="print-button" onclick="printPriorityOrders()">Imprimir</button></div>
     </div>
+    <div class="metric-card">
+        <div class="metric-title">Valor Total</div>
+        <div><span class="label">Hoje:</span> <span id="totalValue" class="metric-value">R$ 0,00</span></div>
+        <div><span class="label">Ontem:</span> <span id="yesterdayValue" class="metric-value">R$ 0,00</span></div>
+        <div><span class="label">Ticket Médio:</span> <span id="averageTicket" class="metric-value">R$ 0,00</span></div>
+        <div id="paymentBreakdown"></div>
+    </div>
+    <div class="metric-card">
+        <div class="metric-title">Entregas por Motoboy (Hoje)</div>
+        <div id="courierDeliveries"></div>
+    </div>
+</div>
+</div>
+</div>
+<div id="ongoingModal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <div id="ongoingContent"></div>
+    </div>
+</div>
+<div id="readyOrdersModal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <div id="readyOrdersContent"></div>
+    </div>
+</div>
+<div id="priorityOrdersModal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <div id="priorityOrdersContent"></div>
+    </div>
+</div>
+<div id="cancellationPopup" class="cancellation-popup">
+    <span class="close" onclick="closeCancellationPopup()">&times;</span>
+    <p id="cancellationMessage"></p>
+    <button class="hide-notification-button" onclick="hideCancellationNotification()">Ocultar notificação</button>
+</div>
+<div id="sameAddressPopup" class="same-address-popup">
+    <span class="close" onclick="closeSameAddressPopup()">&times;</span>
+    <p id="sameAddressMessage"></p>
+    <button class="hide-notification-button" onclick="hideSameAddressNotification()">Ocultar notificação</button>
+</div>
+<script>
+    // Configuração do Firebase
+    const firebaseConfig = {
+        apiKey: "AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E",
+        authDomain: "cabana-8d55e.firebaseapp.com",
+        databaseURL: "https://cabana-8d55e-default-rtdb.firebaseio.com",
+        projectId: "cabana-8d55e",
+        storageBucket: "cabana-8d55e.appspot.com",
+        messagingSenderId: "706144237954",
+        appId: "1:706144237954:web:345c10370972486afc779b",
+        measurementId: "G-96Y337GYT8"
+    };
+    firebase.initializeApp(firebaseConfig);
+const db = firebase.firestore();
+let map;
+let heatmap;
+let markers = {};
+const firebaseFunctionUrl = 'https://us-central1-cabana-8d55e.cloudfunctions.net/getFoodyOrders/proxy';
+const trackingUrl = 'https://us-central1-cabana-8d55e.cloudfunctions.net/getFoodyTracking/tracking';
+const authToken = '8d7c77946d534444a168bb7da794febf';
+const foodyApiUrl = 'https://app.foodydelivery.com/rest/1.2/orders/';
 
-    <!-- Existing modals and popups remain the same -->
+let orderPrepTimes = {};
+let totalPrepTime = 0;
+let preparedOrders = 0;
+let totalOrdersCount = 0;
+let totalOrdersValue = 0;
+let yesterdayOrdersValue = 0;
+let paymentMethods = {
+    money: 0,
+    card: 0,
+    online: 0
+};
+let currentOrders = [];
+let allOrdersToday = [];
+let courierDeliveries = {};
+let cancelledOrders = 0;
+let lastOrderStatuses = {};
+let priorityOrders = [];
+let sameAddressOrders = {};
+let shownSameAddressNotifications = new Set();
+let lastShownNotificationTime = 0;
+let hiddenNotifications = {
+    cancellation: false,
+    sameAddress: false
+};
 
-    <script>
-        // Existing JavaScript code remains the same
+// Funções existentes permanecem as mesmas
 
-        // New functions for create order form
-        function toggleCreateOrderForm() {
-            const form = document.getElementById('createOrderForm');
-            const button = document.getElementById('toggleFormButton');
-            if (form.style.display === 'none') {
-                form.style.display = 'block';
-                button.textContent = 'Ocultar Formulário';
-            } else {
-                form.style.display = 'none';
-                button.textContent = 'Criar Novo Pedido';
-            }
+// Novas funções para o formulário de criação de pedidos
+function toggleCreateOrderForm() {
+    const form = document.getElementById('createOrderForm');
+    const button = document.getElementById('toggleFormButton');
+    if (form.style.display === 'none') {
+        form.style.display = 'block';
+        button.textContent = 'Ocultar Formulário';
+    } else {
+        form.style.display = 'none';
+        button.textContent = 'Criar Novo Pedido';
+    }
+}
+
+async function submitOrder() {
+    const order = {
+        id: document.getElementById('orderId').value,
+        status: document.getElementById('status').value,
+        paymentMethod: document.querySelector('input[name="paymentMethod"]:checked').value,
+        orderTotal: Number(document.getElementById('orderTotal').value),
+        notes: document.getElementById('notes').value,
+        orderDetails: document.getElementById('orderDetails').value,
+        deliveryPoint: {
+            address: `${document.getElementById('street').value}, ${document.getElementById('streetNumber').value}, ${document.getElementById('neighborhood').value}`,
+            street: document.getElementById('street').value,
+            houseNumber: document.getElementById('streetNumber').value,
+            complement: document.getElementById('complement').value,
+            postalCode: document.getElementById('zipCode').value,
+            city: "Natal",
+            region: "RN",
+            country: "BR"
+        },
+        customer: {
+            customerPhone: document.getElementById('customerPhone').value,
+            customerName: document.getElementById('customerName').value
+        }
+    };
+
+    try {
+        const response = await fetch('https://us-central1-cabana-8d55e.cloudfunctions.net/foodyDeliveryApi/createOrder', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+                'Authorization': authToken
+            },
+            body: JSON.stringify(order)
+        });
+
+        if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
         }
 
-        async function submitOrder() {
-            const order = {
-                id: document.getElementById('orderId').value,
-                status: document.getElementById('status').value,
-                paymentMethod: document.querySelector('input[name="paymentMethod"]:checked').value,
-                orderTotal: Number(document.getElementById('orderTotal').value),
-                notes: document.getElementById('notes').value,
-                orderDetails: document.getElementById('orderDetails').value,
-                deliveryPoint: {
-                    address: `${document.getElementById('street').value}, ${document.getElementById('streetNumber').value}, ${document.getElementById('neighborhood').value}`,
-                    street: document.getElementById('street').value,
-                    houseNumber: document.getElementById('streetNumber').value,
-                    complement: document.getElementById('complement').value,
-                    postalCode: document.getElementById('zipCode').value,
-                    city: "Natal",
-                    region: "RN",
-                    country: "BR"
-                },
-                customer: {
-                    customerPhone: document.getElementById('customerPhone').value,
-                    customerName: document.getElementById('customerName').value
-                }
-            };
+        const result = await response.json();
+        console.log('Pedido criado:', result);
+        alert('Pedido criado com sucesso!');
+        document.getElementById('createOrderForm').reset();
+        fetchOrders(); // Atualiza a lista de pedidos
+    } catch (error) {
+        console.error('Erro ao criar pedido:', error);
+        alert('Erro ao criar pedido: ' + error.message);
+    }
+}
 
-            try {
-                const response = await fetch('https://us-central1-cabana-8d55e.cloudfunctions.net/foodyDeliveryApi/createOrder', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'Authorization': authToken
-                    },
-                    body: JSON.stringify(order)
-                });
+// Inicialização da aplicação
+loadDataFromLocalStorage();
+initMap();
+fetchOrders();
+setInterval(fetchOrders, 10000); // Atualiza a cada 10 segundos
 
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
-                }
-
-                const result = await response.json();
-                console.log('Pedido criado:', result);
-                alert('Pedido criado com sucesso!');
-                document.getElementById('createOrderForm').reset();
-                fetchOrders(); // Atualiza a lista de pedidos
-            } catch (error) {
-                console.error('Erro ao criar pedido:', error);
-                alert('Erro ao criar pedido: ' + error.message);
-            }
+// Configuração dos modais
+const modals = document.querySelectorAll('.modal');
+const closeSpans = document.querySelectorAll('.close');
+closeSpans.forEach((span) => {
+    span.onclick = function() {
+        const modal = span.closest('.modal');
+        if (modal) {
+            modal.style.display = 'none';
         }
-
-        // Initialize the application
-        loadDataFromLocalStorage();
-        initMap();
-        fetchOrders();
-        setInterval(fetchOrders, 10000); // Update every 10 seconds
+    }
+});
+window.onclick = function(event) {
+    modals.forEach(modal => {
+        if (event.target == modal) {
+            modal.style.display = 'none';
+        }
+    });
+    if (event.target == document.getElementById('cancellationPopup')) {
+        closeCancellationPopup();
+    }
+    if (event.target == document.getElementById('sameAddressPopup')) {
+        closeSameAddressPopup();
+    }
+}
     </script>
 </body>
 </html>
